--- a/src/lab06.vcxproj
+++ b/src/lab06.vcxproj
@@ -85,6 +85,10 @@
     <ClInclude Include="Shape.h" />
     <ClInclude Include="WindowManager.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\resources\simple_frag.glsl" />
+    <None Include="..\resources\simple_vert.glsl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
